--- a/index.html
+++ b/index.html
@@ -11,8 +11,31 @@
     
      <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav class="navbar bg-info">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+              <a class="navbar-brand" href="#">
+                <img src="img\logo.png" alt="Logo" class="d-inline-block" style="width: 65px">
+                Travel-Lines
+              </a>
+            </div>
+            </div>
+            </div>
+          </nav>
+
+
+    </header>
+
+
+    <main>
+
+
+
+    </main>
 
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
