--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <main>
         <div class="container">
-        <div class="row text-center mt-3">
+        <div class="row text-center mt-3 mb-5">
         <div class="col-12">
 <h2>Our amazing tours</h2>
 <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</h6>
@@ -39,12 +39,41 @@
 
         <div class="row">
         <div class="col-4">
-
+            <div class="card" style=>
+                <img class="photos" src="https://picsum.photos/id/1061/300/300">
+                <div class="card-body text-center p-0">
+                  <h5 class="card-title bgyellow p-3">EXPLORE THE SEA</h5>
+                  <p class="card-text m-3">Ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto </p>
+                  <hr class="line mb-1">
+                  <p class="underline">2 days 2 destination</p>
+                  <p class="prices">350$/person</p>
+                </div>
+              </div>
         </div>
         <div class="col-4">
+                <div class="card" style=>
+                    <img class="photos" src="https://picsum.photos/id/1061/300/300">
+                    <div class="card-body text-center p-0">
+                      <h5 class="card-title bgyellow p-3">EXPLORE THE SEA</h5>
+                      <p class="card-text m-3">Ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto </p>
+                      <hr class="line mb-1">
+                      <p class="underline">2 days 2 destination</p>
+                      <p class="prices">350$/person</p>
+                    </div>
+                  </div>
             
         </div>
         <div class="col-4">
+                <div class="card" style=>
+                    <img class="photos" src="https://picsum.photos/id/1061/300/300">
+                    <div class="card-body text-center p-0">
+                      <h5 class="card-title bgyellow p-3">EXPLORE THE SEA</h5>
+                      <p class="card-text m-3">Ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto </p>
+                      <hr class="line mb-1">
+                      <p class="underline">2 days 2 destination</p>
+                      <p class="prices">350$/person</p>
+                    </div>
+                  </div>
             
         </div>
         </div>
