--- a/index.html
+++ b/index.html
@@ -39,39 +39,39 @@
 
         <div class="row">
         <div class="col-4">
-            <div class="card" style=>
+            <div class="card shadow mb-5 bg-body-tertiary rounded" style=>
                 <img class="photos" src="https://picsum.photos/id/1061/300/300">
                 <div class="card-body text-center p-0">
-                  <h5 class="card-title bgyellow p-3">EXPLORE THE SEA</h5>
+                  <h5 class="card-title bg-warning text-white p-3">EXPLORE THE SEA</h5>
                   <p class="card-text m-3">Ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto </p>
                   <hr class="line mb-1">
-                  <p class="underline">2 days 2 destination</p>
-                  <p class="prices">350$/person</p>
+                  <p class="underline text-warning">2 days 2 destination</p>
+                  <p class="prices"><strong>350$</strong>/person</p>
                 </div>
               </div>
         </div>
         <div class="col-4">
-                <div class="card" style=>
-                    <img class="photos" src="https://picsum.photos/id/1061/300/300">
+                <div class="card shadow mb-5 bg-body-tertiary rounded" style=>
+                    <img class="photos" src="https://picsum.photos/id/15/300/300">
                     <div class="card-body text-center p-0">
-                      <h5 class="card-title bgyellow p-3">EXPLORE THE SEA</h5>
+                      <h5 class="card-title bg-success text-white p-3">HIKE IN THE FOREST</h5>
                       <p class="card-text m-3">Ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto </p>
                       <hr class="line mb-1">
-                      <p class="underline">2 days 2 destination</p>
-                      <p class="prices">350$/person</p>
+                      <p class="underline text-success">3 days 2 destination</p>
+                      <p class="prices"><strong>350$</strong>/person</p>
                     </div>
                   </div>
             
         </div>
         <div class="col-4">
-                <div class="card" style=>
-                    <img class="photos" src="https://picsum.photos/id/1061/300/300">
+                <div class="card shadow mb-5 bg-body-tertiary rounded" style=>
+                    <img class="photos" src="https://picsum.photos/id/1036/300/300">
                     <div class="card-body text-center p-0">
-                      <h5 class="card-title bgyellow p-3">EXPLORE THE SEA</h5>
+                      <h5 class="card-title bg-info text-white p-3">CAMP IN THE SNOW</h5>
                       <p class="card-text m-3">Ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto </p>
                       <hr class="line mb-1">
-                      <p class="underline">2 days 2 destination</p>
-                      <p class="prices">350$/person</p>
+                      <p class="underline text-info">2 days 1 destination</p>
+                      <p class="prices"><strong>350$</strong>/person</p>
                     </div>
                   </div>
             
