--- a/index.html
+++ b/index.html
@@ -76,47 +76,33 @@
                   </div>
             </div>
         </div>
- <div class="row text-center mb-2 bg-light">
+ <div class="row text-center mb-2 bg-light shadow mb-5 bg-body-tertiary rounded">
 <div class="col-12">
-    <h5>CONTATTACI</h5>
-</div>
- </div>
-    <form class="row g-3 bg-light">
-        <div class="col-md-6">
-          <label for="inputEmail4" class="form-label">Nome</label>
-          <input type="email" class="form-control" id="inputEmail4">
-        </div>
-        <div class="col-md-6">
-          <label for="inputPassword4" class="form-label">Cognome</label>
-          <input type="password" class="form-control" id="inputPassword4">
-        </div>
-        <div class="col-12">
-          <label for="inputAddress" class="form-label">Indirizzo</label>
-          <input type="text" class="form-control" id="inputAddress">
-        </div>
-        <div class="col-md-6">
-          <label for="inputCity" class="form-label">Città</label>
-          <input type="text" class="form-control" id="inputCity">
-        </div>
-        <div class="col-md-4">
-          <label for="inputState" class="form-label">Nazione</label>
-          <select id="inputState" class="form-select">
-            <option selected="">Choose...</option>
-            <option>...</option>
-          </select>
-        </div>
-        <div class="col-md-2">
-          <label for="inputZip" class="form-label">CAP</label>
-          <input type="text" class="form-control" id="inputZip">
-        </div>
-      </form>
-      
+    <h5>PRENOTA IL TUO VIAGGIO</h5>
     </div>
+    <div class="col-6">
+        <div class="form-outline">
+            <label class="form-label" for="form6Example1">Nome</label>
+            <input type="text" id="form6Example1" class="form-control"/>
+            </div>
+          </div>
+          <div class="col-6">
+          <div class="form-outline">
+            <label class="form-label" for="form6Example2">Cognome</label>
+            <input type="text" id="form6Example2" class="form-control" />
+          </div>
         </div>
-        </div>
+  <div class="col-12 mt-2 mb-4">
+    <select class="form-select" aria-label="Default select example">
+        <option selected="">Seleziona il tuo viaggio</option>
+        <option value="1">EXPLORE THE SEA</option>
+        <option value="2">HIKE THE FOREST</option>
+        <option value="3">CAMP IN THE SNOW</option>
+      </select>
+
+
+ </div>
     </main>
-
-
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
